--- a/Explorer/src/app/feature-modules/company/add-availabledate-form/add-availabledate-form.component.html
+++ b/Explorer/src/app/feature-modules/company/add-availabledate-form/add-availabledate-form.component.html
@@ -1,5 +1,5 @@
 <div class="date-time-container">
-    <h2>Choose Date</h2>
+    <h2>Choose date:</h2>
   
     <div class="date-section">
       <mat-form-field>
@@ -16,8 +16,8 @@
     </div-->
   
     <div class="buttons-section">
-        <button mat-button class="cancel-button" (click)="closeDialog()">Cancel</button>
-        <button mat-button class="save-button" (click)="saveData()">Save</button>
+        <button mat-button class="cancel-button" (click)="closeDialog()">❌</button>
+        <button color="accent" mat-button class="save-button" (click)="saveData()">✅</button>
     </div>
   </div>
   
