--- a/Explorer/src/app/feature-modules/layout/navbar/navbar.component.html
+++ b/Explorer/src/app/feature-modules/layout/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar color="primary">
+<mat-toolbar class="mat">
   <div>
-    <p>Explorer</p>
+    <p class="title">Healthcare Intelligence ⚕</p>
     <div id="buttons">
       <button
         *ngIf="user && user.username === ''"
