--- a/Explorer/src/app/feature-modules/user/change-password-system-admin/change-password-system-admin.component.html
+++ b/Explorer/src/app/feature-modules/user/change-password-system-admin/change-password-system-admin.component.html
@@ -1,3 +1,4 @@
+<div class="form-container">
 <form [formGroup]="registrationAdminForm" (ngSubmit)="updateProfile()">
     <div>
       <div class="row-container">
@@ -37,4 +38,4 @@
       <button color="primary" type="submit" mat-raised-button>Change password for system admin</button>
     </div>
   </form>
-  
+</div>
