--- a/Explorer/src/app/feature-modules/user/update-profile/update-profile.component.css
+++ b/Explorer/src/app/feature-modules/user/update-profile/update-profile.component.css
@@ -6,9 +6,72 @@ form {
 }
 
 .button{
-    background-color: cadetblue;
-    font-size: 18px;
+    background-color: transparent;
+    font-size: 25px;
     color: white;
-    border: solid 1px black;
-    border-radius: 5px;
+    cursor: pointer;
 }
+
+.customer-card {
+    display: flex;
+    flex-direction: column;
+    max-width: 650px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    font-family: 'Arial', sans-serif;
+    font-size: large;
+    background-color: rgb(12, 73, 153);
+    display: flex;
+    margin-bottom: 50px;
+  }
+  
+  .buttonSubmit{
+    background-color: rgb(12, 73, 153);
+    color: white;
+    cursor: pointer;
+    width: 100px;
+  }
+  
+  .uploadQR{
+    width: 200px;
+    height: 30px;
+    margin-top: 220px;
+    font-size: medium;
+    color: white;
+  }
+  
+  
+  .customer-info {
+    margin-left: 25px;
+    text-align: start;
+  
+  }
+  
+  .edit{
+    color: white;
+    cursor: pointer;
+  }
+  
+  .info-item {
+    margin-bottom: 10px;
+  }
+  
+  strong {
+    color: #bcb9b9;
+    font-size: 16px;
+  }
+  
+  span {
+    font-style: italic;
+    color: #ffffff;
+  }
+
+  .form-container1 {
+    background-image: url('/assets/back2.png'); /* Zamijenite ovu vrednost sa putanjom do vaše slike */
+    background-size: cover; /* Podešavanje da slika pokriva čitavu površinu kontejnera */
+    width: 1950px;
+    height: 770px; 
+  }
