--- a/Explorer/src/app/feature-modules/user/user-profile/user-profile.component.html
+++ b/Explorer/src/app/feature-modules/user/user-profile/user-profile.component.html
@@ -1,5 +1,6 @@
+<div class="form-container1">
 <div *ngIf="user" class="customer-card">
-    <img src="../../../../assets/user.png" height="100px" alt="customer-info"/>
+    <img src="../../../../assets/girl3.png" height="100px" alt="customer-info"/>
     <div class="customer-info">
         <div class="info-item">
             <strong>First Name:</strong> <span>{{ user.firstName }}</span>
@@ -33,5 +34,5 @@
 
     <!--<xp-all-complaint *ngIf="renderReplayOnComplaint" (replayOnComplaintClicked)="onReplayOnComplaintClicked()"></xp-all-complaint>-->
     
-
+</div>
 </div>
