--- a/Explorer/src/app/feature-modules/company/all-company-preview/all-company-preview.component.css
+++ b/Explorer/src/app/feature-modules/company/all-company-preview/all-company-preview.component.css
@@ -55,7 +55,7 @@ li.equipment-item {
 }
 .search-button {
   padding: 10px;
-  background-color: #4CAF50;
+  background-color: rgb(5, 29, 167);
   color: white;
   border: none;
   border-radius: 5px;
@@ -66,24 +66,25 @@ li.equipment-item {
   justify-content: left;
   gap: 10px;
   padding: 10px;
-  background-color: #4CAF50;
+  background-color: rgb(5, 29, 167);
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  margin-right: 20px;
 }
 
  .search-container {
    display: flex;
    align-items: center;
    justify-content: center;
-   margin-top: 20px;
+   gap: 20px;
  }
 
  #gradeSelect{
   margin-left: 30px;
   width:fit-content;
-  background-color: #4CAF50;
+  background-color: rgb(5, 29, 167);
   color: white;
   border: none;
   border-radius: 5px;
@@ -94,7 +95,7 @@ li.equipment-item {
  #sortCriteriumSelect{
   margin-left: 30px;
   width:fit-content;
-  background-color: #4CAF50;
+  background-color: rgb(5, 29, 167);
   color: white;
   border: none;
   border-radius: 5px;
@@ -110,3 +111,34 @@ li.equipment-item {
   gap: 30px;
   padding: 30px;
  }
+
+ .form-container {
+    background-image: url('/assets/back2.png'); /* Zamijenite ovu vrednost sa putanjom do vaše slike */
+    background-size: cover; /* Podešavanje da slika pokriva čitavu površinu kontejnera */
+    width: auto;
+    height: 770px; /* Postavite visinu na 100% visine prozora */
+    color: rgb(5, 29, 167); /* Postavite boju teksta kako biste bili vidljivi na slici */
+    font-family: Arial, sans-serif; /* Postavite font teksta po potrebi */
+  }
+
+  .blue{
+    color: rgb(5, 29, 167);
+  }
+
+  .buttonPen{
+    border-radius: 0%;
+    border-color: transparent;
+    background-color: transparent;
+    color: rgb(5, 29, 167);
+    cursor: pointer;
+  }
+
+  .divButton{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+  }
+
+  .blueSearch{
+    border-color: rgb(5, 29, 167);
+  }
