--- a/Explorer/src/app/feature-modules/company/company-form/company-form.component.css
+++ b/Explorer/src/app/feature-modules/company/company-form/company-form.component.css
@@ -2,11 +2,13 @@
   justify-content: left;
   gap: 10px;
   padding: 10px;
-  background-color: #4CAF50;
+  background-color: rgb(5, 29, 167);
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  width: 100px;
+  height: 50px;
 }
 
 .map-frame {
@@ -18,7 +20,7 @@
 
 
 .label{
-    color: #4CAF50;
+    color: rgb(5, 29, 167);
     font-size: medium;
     font-weight: bold;
 }
@@ -31,6 +33,8 @@
   
   
 .fields{
-    gap: 10px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
 }
   
