--- a/Explorer/src/app/feature-modules/complaint/all-complaint/all-complaint.component.css
+++ b/Explorer/src/app/feature-modules/complaint/all-complaint/all-complaint.component.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
   }
   
   .single-complaint {
@@ -13,6 +14,7 @@
     border-radius: 8px;
     background-color: #f9f9f9;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    width: 300px;
   }
   
   .complaint-content {
@@ -26,6 +28,7 @@
     padding: 8px 15px;
     border-radius: 5px;
     cursor: pointer;
+    margin-left: 70px;
   }
   
   .replay-component {
@@ -34,11 +37,19 @@
   
   .done-button {
     margin-top: 20px;
-    background-color: #2ecc71;
+    background-color: #E33886;
     color: #fff;
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
+  }
+
+  .form-container1 {
+    background-image: url('/assets/back2.png'); /* Zamijenite ovu vrednost sa putanjom do vaše slike */
+    background-size: cover; /* Podešavanje da slika pokriva čitavu površinu kontejnera */
+    width: 1950px;
+    height: 770px;
+    color: rgb(12, 73, 153); 
   }
   
