--- a/Explorer/src/app/feature-modules/complaint/replay-on-complaint/replay-on-complaint.component.html
+++ b/Explorer/src/app/feature-modules/complaint/replay-on-complaint/replay-on-complaint.component.html
@@ -1,12 +1,12 @@
 <!-- your.component.html -->
 <form [formGroup]="complaintForm" *ngIf="renderUpdateComplaint" class="complaint-form">
   <div class="fields">
-    <p class="label">Replay on complaint:</p>
+    <h2 class="label">Replay on complaint:</h2>
     <mat-form-field appearance="fill" class="input-field">
       <input matInput formControlName="replay" type="text" />
     </mat-form-field>
-    <button mat-raised-button type="button" color="primary" (click)="updateComplaint()" class="button">
-      Replay
+    <button mat-raised-button type="button" (click)="updateComplaint()" class="button">
+      ✔
     </button>
   </div>
 </form>
