--- a/Explorer/src/app/feature-modules/loyality-program/define-loyality-program/define-loyality-program.component.html
+++ b/Explorer/src/app/feature-modules/loyality-program/define-loyality-program/define-loyality-program.component.html
@@ -1,27 +1,20 @@
-<form [formGroup]="defineLoyalityProgramForm" (ngSubmit)="defineLoyalityProgram()">
+<div class="form-container1">
+<form class="customer-card" [formGroup]="defineLoyalityProgramForm" (ngSubmit)="defineLoyalityProgram()">
+    <h2>✴ LOYALITY PROGRAM ✴</h2>
                 <div class="row-container">
-                    <div class="one-item-container">
                     <mat-form-field>
                         <mat-label>Name category</mat-label>
-                        <input matInput formControlName="nameCategory" type="text" />
+                        <input class="widthInput" matInput formControlName="nameCategory" type="text" />
                     </mat-form-field>
-                    </div>
-                </div>
-                <div class="row-container">
-                    <div class="one-item-container">
                     <mat-form-field>
                         <mat-label>Required points:</mat-label>
                         <input matInput formControlName="requiredPoints" type="number" />
                     </mat-form-field>
-                    </div>
-                </div>
-                <div class="row-container">
-                    <div class="one-item-container">
                     <mat-form-field>
                         <mat-label>Discount:</mat-label>
                         <input matInput formControlName="discount" type="number" />
                     </mat-form-field>
-                    </div>
                  </div>
         <button color="primary" type="submit" mat-raised-button>Define</button>
 </form>
+</div>
