--- a/Explorer/src/app/feature-modules/user/change-password-system-admin/change-password-system-admin.component.css
+++ b/Explorer/src/app/feature-modules/user/change-password-system-admin/change-password-system-admin.component.css
@@ -44,4 +44,22 @@ form {
     background-color: #4169e1; /* Boja koja će se prikazati kada korisnik pređe mišem */
     color: white; /* Opciono, možete postaviti i boju teksta na belu ili drugu vidljivu boju */
   }
+
+  .form-container {
+    background-image: url('/assets/back2.png'); /* Zamijenite ovu vrednost sa putanjom do vaše slike */
+    background-size: cover; /* Podešavanje da slika pokriva čitavu površinu kontejnera */
+    background-repeat: no-repeat; /* Da sprečite ponavljanje slike */
+    background-position: center; /* Podešavanje pozicije slike na sredinu kontejnera */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1950px;
+    height: 770px; /* Postavite visinu na 100% visine prozora */
+    color: white; /* Postavite boju teksta kako biste bili vidljivi na slici */
+    font-family: Arial, sans-serif; /* Postavite font teksta po potrebi */
+  }
+
+  .alink{
+    color: rgb(6, 58, 117);
+  }
   
