--- a/Explorer/src/app/feature-modules/company/company-profile/company-profile.component.html
+++ b/Explorer/src/app/feature-modules/company/company-profile/company-profile.component.html
@@ -1,66 +1,90 @@
 <div  *ngIf="company">
+    <h1>{{ company.name}} Admin Home Page</h1>
     <div >
-      <h2>{{ company.name }}</h2>
-      <p><strong>Adress:</strong>{{ company.adress }}</p>
-      
-      <p><strong>Description:</strong>{{ company.description }}</p>
-      <p><strong>Grade:</strong>{{ company.grade }}</p>
-      <h3><strong>Equipment:</strong></h3>
-      <button mat-icon-button color="primary" (click)="showEquipmentSelect()" >
-        <mat-icon>add</mat-icon>
-      </button>
-      <div *ngIf="
-          company.equipmentSet && company.equipmentSet.length > 0;
-          else noEquipment
-        ">
-        
-        
-        <input type="text" class="search-input" placeholder="Search equipment..." [(ngModel)]="equipmentSearchValue" (ngModelChange)="onEquipmentSearchChange()">
-        
-        <ul>
-          <li *ngFor="let equipment of filteredEquipment || company.equipmentSet" class="equipment-item">
-            <strong>Name: </strong>{{ equipment.name }}<br />
-            <strong>Description: </strong> {{ equipment.description }}<br />
-            <strong>Type: </strong> {{ equipment.typeOfEquipment }}<br />
-            <strong>Grade: </strong> {{ equipment.grade }}<br />
-            <strong>Price: </strong> {{ equipment.price }}<br />
-            <button mat-icon-button color="warn" (click)="deleteEquipment(equipment)" [disabled]="isEquipmentReserved(equipment)">
-              <mat-icon>delete</mat-icon>
-            </button>
-            <button mat-icon-button color="primary" (click)="openUpdateEquipmentForm(equipment)">
-              <mat-icon>edit</mat-icon>
-            </button>
+      <div class="company-info-container">
+        <xp-company-info [company]="company" class="company-info"></xp-company-info>
+        <div class="map-frame">
+          <div id="leafletMap" class="map-wrap"></div>
+        </div>
+        <button mat-icon-button color="primary" (click)="toggleEquipmentComponent()">
+          <mat-icon>{{ shouldShowEquipmentComponent ? 'exit_to_app' : 'note_add' }}</mat-icon>
+        </button>
+        <button (click)="toggleAdminsVisibility()">
+          <mat-icon>{{ shouldShowDatesComponent ?  'exit_to_app' : 'calendar_today' }}</mat-icon>
+        </button>
+      </div>
+      <div *ngIf="company.adminsSet && company.adminsSet.length > 0; else noAdmins">
+        <h3 class="section-title"><strong>Company Admins:</strong></h3>
+        <ol class="admin-list">
+          <li *ngFor="let admin of company.adminsSet" class="admin-item">
+            <strong>First Name: </strong>{{ admin.firstName }}<br />
+            <strong>Last Name: </strong>{{ admin.lastName }}<br />
           </li>
-        </ul>
+        </ol>
       </div>
-      <ng-template #noEquipment>
-        <h3><strong>Equipment:</strong></h3>
-        <br />
-        Coming soon!
-      </ng-template>
-      <div *ngIf="shouldRenderEquipmentSelect">
-        <h3><strong>Add Equipment:</strong></h3>
-        
-        <!-- Add the listbox for equipment selection -->
-        <select [(ngModel)]="selectedEquipmentId" class="equipment-listbox">
-          <option *ngFor="let equipment of availableEquipment" [value]="equipment.id">
-            {{ equipment.name }}
-          </option>
-        </select>
-        
-        <!-- Add the "Add" button to call the equipmentService method -->
-        <button mat-raised-button color="primary" (click)="addEquipment()">Add</button>
-      </div>
-    
-      <xp-equipment-form *ngIf="shouldRenderEquipmentForm" (updateEquipmentClicked)="updateEquipmentClicked()" [equipment]="equipmentForUpdate" [company]="company" ></xp-equipment-form>
       
-      <button mat-raised-button color="primary" (click)="openDatePicker()">Add Pickup Date</button>
-      <mat-form-field *ngIf="showDatePicker">
-        <input matInput [matDatepicker]="picker" (dateInput)="onDateSelected($event)" placeholder="Select a date" [(ngModel)]="selectedDate">
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
-      </mat-form-field>
-      <h2 *ngIf="availableTimeSlots">AVAILABLE TIME SLOTS:</h2>
+      <ng-template #noAdmins>
+        <p class="no-admins-message">No administrators found for this company.</p>
+      </ng-template>
+      
+      <div class="equipment-container" *ngIf="shouldShowEquipmentComponent">
+        <h3 class="equipment-header"><strong>Equipment</strong></h3>
+        <button mat-icon-button color="primary" (click)="showEquipmentSelect()" >
+          <mat-icon>add</mat-icon>
+        </button>
+        <input type="text" class="search-input" placeholder="Search equipment..." [(ngModel)]="equipmentSearchValue" (ngModelChange)="onEquipmentSearchChange()">
+        <div *ngIf="
+            company.equipmentSet && company.equipmentSet.length > 0;
+            else noEquipment
+          ">
+          
+          
+          <ul>
+            <li *ngFor="let equipment of filteredEquipment || company.equipmentSet" class="equipment-item">
+              <strong>Name: </strong>{{ equipment.name }}<br />
+              <strong>Description: </strong> {{ equipment.description }}<br />
+              <strong>Type: </strong> {{ equipment.typeOfEquipment }}<br />
+              <strong>Grade: </strong> {{ equipment.grade }}<br />
+              <strong>Price: </strong> {{ equipment.price }}<br />
+              <button mat-icon-button color="warn" (click)="deleteEquipment(equipment)" [disabled]="isEquipmentReserved(equipment)">
+                <mat-icon>delete</mat-icon>
+              </button>
+              <button mat-icon-button color="primary" (click)="openUpdateEquipmentForm(equipment)">
+                <mat-icon>edit</mat-icon>
+              </button>
+            </li>
+          </ul>
+        </div>
+        <ng-template #noEquipment>
+          <h3><strong>Equipment:</strong></h3>
+          <br />
+          Coming soon!
+        </ng-template>
+        <div *ngIf="shouldRenderEquipmentSelect">
+          <h3><strong>Add Equipment:</strong></h3>
+          
+          <!-- Add the listbox for equipment selection -->
+          <select [(ngModel)]="selectedEquipmentId" class="equipment-listbox">
+            <option *ngFor="let equipment of availableEquipment" [value]="equipment.id">
+              {{ equipment.name }}
+            </option>
+          </select>
+          
+          <!-- Add the "Add" button to call the equipmentService method -->
+          <button mat-raised-button color="primary" (click)="addEquipment()">Add</button>
+        </div>
+      
+        <xp-equipment-form *ngIf="shouldRenderEquipmentForm" (updateEquipmentClicked)="updateEquipmentClicked()" [equipment]="equipmentForUpdate" [company]="company" ></xp-equipment-form>
+      </div>
+      
+      <div *ngIf="shouldShowDatesComponent">
+        <button mat-raised-button color="primary" (click)="openDatePicker()">Add Pickup Date</button>
+        <mat-form-field *ngIf="showDatePicker">
+          <input matInput [matDatepicker]="picker" (dateInput)="onDateSelected($event)" placeholder="Select a date" [(ngModel)]="selectedDate">
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+        <h2 *ngIf="availableTimeSlots">AVAILABLE TIME SLOTS:</h2>
         <div class="date-cards-container">
           <div class="date-card" *ngFor="let timeSlot of availableTimeSlots">
             <div class="card-content">
@@ -71,27 +95,8 @@
           </div>
           <button class="button3" (click)="createPickupTerm()" *ngIf="selectedTimeSlot">Choose</button>
         </div>
-      
-      <div *ngIf="
-        company.adminsSet && company.adminsSet.length > 0;
-        else noAdmins">
-        <h3><strong>Company Admins:</strong></h3>
-        <ol>
-          <li *ngFor="let admin of company.adminsSet" class="admin-item">
-            <strong>First Name: </strong>{{ admin.firstName }}<br />
-            <strong>Last Name: </strong> {{ admin.lastName }}<br />
-          </li>
-        </ol>
+        <h2>Your scheduled deliveries</h2>
+        <full-calendar [options]="calendarOptions"></full-calendar>
       </div>
-      <ng-template #noAdmins>
-        <h3><strong>Company has no admins currently!</strong></h3>
-      </ng-template>
-      
-  
     </div>
-    <div class="map-frame">
-      <div id="leafletMap" class="map-wrap"></div>
-    </div>
-    <h2>Your scheduled deliveries</h2>
-    <full-calendar [options]="calendarOptions"></full-calendar>
 <div>
