--- a/Explorer/src/app/feature-modules/equipment/equipment-form/equipment-form.component.html
+++ b/Explorer/src/app/feature-modules/equipment/equipment-form/equipment-form.component.html
@@ -35,6 +35,11 @@
         <mat-label>Price</mat-label>
             <input matInput formControlName="price" type="number" />
       </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>Quantity</mat-label>
+            <input matInput formControlName="quantity" type="number" />
+      </mat-form-field>
   
       <button 
         class="button"
